2016-11-11      Gaius Mulley <gaius@gnu.org>

	* updates for the shared library example pge.
	* gm2/examples/pge/Fractions.mod:  removed unnecessary spaces.
	* gm2/examples/pge/history.def:  major changes to history of collision.
	* gm2/examples/pge/history.mod:  major changes to history of collision.
	* gm2/examples/pge/roots.def:  new procedure function nearCoord.
	* gm2/examples/pge/roots.mod:  new procedure function nearCoord.
	* gm2/examples/pge/twoDsim.mod:  huge changes to include interpenetration
          testing.

2016-11-02      Gaius Mulley <gaius@gnu.org>

	* gm2/mc-boot/Gdecl.c:  regenerated.
	* gm2/mc/decl.mod:  generate a static_cast.  This fixes a
	  bug in the translation of Args.mod.

2016-11-01      Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-gcc/m2linemap.h:  changed prototype of StartFile to
          use void * rather than char *.
	* gm2/m2.flex:  do not include p2c/p2c.h and m2linemap.h.

2016-10-20      Gaius Mulley <gaius@gnu.org>

	* gm2/examples/pge/MemStream.mod:  many changes and bug fixes to
	  shared library example.
	* gm2/examples/pge/MemStream.mod:  ditto.
	* gm2/examples/pge/NetworkOrder.mod:  ditto.
	* gm2/examples/pge/deviceIf.mod:  ditto.
	* gm2/examples/pge/examples/triangle.py:  ditto.
	* gm2/examples/pge/history.def:  ditto.
	* gm2/examples/pge/history.mod:  ditto.
	* gm2/examples/pge/pgeif.def:  ditto.
	* gm2/examples/pge/pgeif.mod:  ditto.
	* gm2/examples/pge/roots.def:  ditto.
	* gm2/examples/pge/roots.mod:  ditto.
	* gm2/examples/pge/twoDsim.def:  ditto.
	* gm2/examples/pge/twoDsim.mod:  ditto.
	* gm2/examples/pge/buffers.c:  ditto.
	* gm2/examples/pge/max2code.py:  fixed options.
	* gm2/examples/pge/mxmmaxima.py:  removed debugging trace.
	* gm2/examples/pge/mxmparser.py:  removed debugging trace.
	* gm2/examples/pge/mxmtree.py:  removed debugging trace.
	* gm2/examples/pge/pge.py:  huge number of changes.
	* gm2/examples/pge/pgeif.i:  changes to the python interface.